--- a/gallery.html
+++ b/gallery.html
@@ -123,7 +123,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
-                            href="#tab-2">
+                            href="#tab-3">
                             <span class="text-dark" style="width: 150px;">Maletas</span>
                         </a>
                     </li>
@@ -184,12 +184,12 @@
                                         </div>
                                         <div class="row">
                                             <!--Start Controls-->
-                                            <div class="col-1 align-self-center">
+                                            <!-- <div class="col-1 align-self-center">
                                                 <a href="#multi-item-example" role="button" data-bs-slide="prev">
                                                     <i class="text-dark fas fa-chevron-left"></i>
                                                     <span class="sr-only"></span>
                                                 </a>
-                                            </div>
+                                            </div> -->
                                             <!--End Controls-->
                                             <!--Start Carousel Wrapper-->
                                             <div id="multi-item-example"
@@ -224,7 +224,7 @@
                                                     <!--/.First slide-->
 
                                                     <!--Second slide-->
-                                                    <div class="carousel-item">
+                                                    <!-- <div class="carousel-item">
                                                         <div class="row">
                                                             <div class="col-4">
                                                                 <a href="#">
@@ -233,18 +233,18 @@
                                                                 </a>
                                                             </div>
                                                         </div>
-                                                    </div>                                                    
+                                                    </div>                                                     -->
                                                 </div>
                                                 <!--End Slides-->
                                             </div>
                                             <!--End Carousel Wrapper-->
                                             <!--Start Controls-->
-                                            <div class="col-1 align-self-center">
+                                            <!-- <div class="col-1 align-self-center">
                                                 <a href="#multi-item-example" role="button" data-bs-slide="next">
                                                     <i class="text-dark fas fa-chevron-right"></i>
                                                     <span class="sr-only">Next</span>
                                                 </a>
-                                            </div>
+                                            </div> -->
                                             <!--End Controls-->
                                         </div>
                                     </div>
@@ -373,8 +373,8 @@
                                     <div class="col-lg-7 mt-5">
                                         <div class="card">
                                             <div class="card-body">
-                                                <h1 class="h2">Termos</h1>
-                                                <p class="h3 py-2">Desde $25.000</p>
+                                                <h1 class="h2">Maletas</h1>
+                                                <p class="h3 py-2">Desde $68.000</p>
                                                 <p class="py-2">
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
