--- a/gallery.html
+++ b/gallery.html
@@ -105,7 +105,7 @@
     <!-- Header End -->
 
 
-    <!-- Gallery Start -->
+    <!-- Gallery Start yei -->
     <div class="container-fluid gallery py-4">
         <div class="container">
             <!-- <div class="text-center mx-auto mb-5" style="max-width: 800px;">
