--- a/gallery.html
+++ b/gallery.html
@@ -180,7 +180,7 @@
                                     <div class="col-lg-5 mt-5">
                                         <div class="card mb-3">
                                             <img class="img-fluid rounded w-100" src="img/team-2.jpeg"
-                                                alt="Card image cap" id="product-detail">
+                                                alt="Card image cap" id="product-2">
                                         </div>
                                         <div class="row">
                                             <!--Start Controls-->
@@ -196,7 +196,7 @@
                                                 class="col-10 carousel slide carousel-multi-item"
                                                 data-bs-ride="carousel">
                                                 <!--Start Slides-->
-                                                <div class="carousel-inner product-links-wap" role="listbox">
+                                                <div class="carousel-inner product-2" role="listbox">
 
                                                     <!--First slide-->
                                                     <div class="carousel-item active">
