--- a/gallery.html
+++ b/gallery.html
@@ -480,7 +480,7 @@
                                                 </div>
                                                 <!--End Slides-->
                                             </div>
-                                            <!--End Carousel Wrapper-->
+                                            <!--End Carousel Wrapper yupi-->
                                             <!--Start Controls-->
                                             <div class="col-1 align-self-center">
                                                 <a href="#multi-item-example" role="button" data-bs-slide="next">
