--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Productos para la familia</title>
-    <link rel="icon" type="Image/png"  href="img/icon-pagina.png">
+    <link rel="icon" type="Image/png" href="img/icon-pagina.png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -98,14 +98,14 @@
         </div>
     </div>
 
-     <!-- Header Start -->
+    <!-- Header Start -->
 
     <div class="header">
         <div class="header">
             <img src="img/Header(1).png" class="img-fluid w-100" alt="">
         </div>
     </div>
-        <!-- Header End -->
+    <!-- Header End -->
 
     <!-- Services Start -->
     <div class="container-fluid services">
@@ -321,8 +321,8 @@
                         <div class="col-md-6 col-lg-6 col-xl-3">
                             <div class="team-item">
                                 <div class="team-img rounded-top">
-                                    <img src="img/Fotos store/boton-jean.jpeg" class="img-fluid w-100 rounded-top bg-light"
-                                        alt="">
+                                    <img src="img/Fotos store/boton-jean.jpeg"
+                                        class="img-fluid w-100 rounded-top bg-light" alt="">
                                 </div>
                                 <div class="team-text rounded-bottom text-center p-4">
                                     <h3 class="text-white">Pasador de jean</h3>
@@ -354,8 +354,6 @@
     <!-- About Start -->
     <div class="text-center mx-auto mb-5">
         <h1 class="display-4 mb-4 ce">Conócenos</h1>
-        <!-- <p class="display-4">Conócenos</p> -->
-        <!-- <h1 class="display-4 mb-4">Spa & Beauty Specialist</h1> -->
     </div>
     <section id="about" class="about">
         <div class="container py-5">
@@ -425,8 +423,6 @@
         </div>
     </section>
     <!-- About End -->
-
-
 
     <!-- Appointment Start -->
     <section id="contact" class="contact">
@@ -518,7 +514,7 @@
                                     <i class="fas fa-envelope fa-2x text-primary me-4"></i>
                                     <div>
                                         <h4>Correo</h4>
-                                        <p class="mb-0">JLHOME@GMAIL.COM</p>
+                                        <p class="mb-0">lindahomejl@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
@@ -527,7 +523,7 @@
                                     <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
                                     <div>
                                         <h4>Teléfono</h4>
-                                        <p class="mb-0">(+57) 3107800442</p>
+                                        <p class="mb-0">(+57)3107800442</p>
                                     </div>
                                 </div>
                             </div>
@@ -543,11 +539,11 @@
                             <h4 class="text-white fw-bold">Siguenos</h4>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"
-                                class="me-3 btn-square border rounded-circle nav-fill"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
-                                class="me-3 btn-square border rounded-circle nav-fill"><i
-                                    class="fab fa-instagram"></i></a>
+                                    class="me-3 btn-square border rounded-circle nav-fill"><i
+                                        class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
+                                    class="me-3 btn-square border rounded-circle nav-fill"><i
+                                        class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -677,11 +673,9 @@
                 <div class="col-md-4">
                     <div class="d-flex justify-content-center">
                         <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"
-                        class="me-3 btn-square border rounded-circle nav-fill"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
-                        class="me-3 btn-square border rounded-circle nav-fill"><i
-                            class="fab fa-instagram"></i></a>
+                            class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
+                            class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center text-md-end text-white">
