--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="team-text rounded-bottom text-center p-4">
                                     <h3 class="text-white">Maleta escolar</h3>
-                                    <p class="mb-0 text-white">Unicornio</p>
+                                    <p class="mb-0 text-white">De gran duración</p>
 
                                 </div>
                                 <div class="text-center p-4">
@@ -145,7 +145,7 @@
                         <div class="col-md-6 col-lg-6 col-xl-3">
                             <div class="team-item">
                                 <div class="team-img rounded-top">
-                                    <img src="img/team-2.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
+                                    <img src="img/Tarro-2.jpeg" class="img-fluid w-100 rounded-top bg-light" alt="">
                                 </div>
                                 <div class="team-text rounded-bottom text-center p-4">
                                     <h3 class="text-white">Termos</h3>
