--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Productos para la familia</title>
+    <link rel="icon" type="Image/png" href="img/icon-pagina.png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
