--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     <img src="img/Producto-hogar.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="text-center p-4">
-                                    <a href="gallery.html"
+                                    <a href="productos_hogar.html"
                                         class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver más</a>
                                 </div>
 
@@ -143,7 +143,7 @@
                                     <img src="img/Productos para los niños.png" class="img-fluid w-100 rounded-top bg-light" alt="">
                                 </div>
                                 <div class="text-center p-4">
-                                    <a href="gallery.html"
+                                    <a href="productos_ninos.html"
                                         class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver más</a>
                                 </div>
 
@@ -163,7 +163,7 @@
                                     <img src="img/Accesorios.png" class="img-fluid w-100 rounded-top bg-light" alt="">
                                 </div>
                                 <div class="text-center p-4">
-                                    <a href="gallery.html"
+                                    <a href="accesorios.html"
                                         class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver más</a>
                                 </div>
 
