--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                     <div class="col-lg-4">
                         <div class="d-flex align-items-center justify-content-end">
                             <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"
-                                class="me-3 btn-square border rounded-circle nav-fill"><i
+                                class="me-3 btn-square-navbar border rounded-circle nav-fill"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
-                                class="me-3 btn-square border rounded-circle nav-fill"><i
+                                class="me-3 btn-square-navbar  border rounded-circle nav-fill"><i
                                     class="fab fa-instagram"></i></a>
                         </div>
                     </div>
@@ -88,7 +88,15 @@
                             <div class="navbar-nav mx-auto border-top">
                                 <a href="index.html" class="nav-item nav-link active">Inicio</a>
                                 <a class="nav-link scrollto" href="#about">Nosotros</a>
-                                <a href="gallery.html" class="nav-item nav-link">Comprar</a>
+                                <!-- <a href="gallery.html" class="nav-item nav-link">Comprar</a> -->
+                                <div class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Comprar</a>
+                                    <div class="dropdown-menu rounded-0 m-0">
+                                        <a href="accesorios.html" class="nav-link dropdown-item">Accesorios</a>
+                                        <a href="productos_hogar.html" class="nav-link dropdown-item">Productos hogar</a>
+                                        <a href="productos_ninos.html" class="nav-link dropdown-item">Para niños</a>
+                                    </div>
+                                </div>
                                 <a class="nav-link scrollto" href="#contact">Contáctanos</a>
                             </div>
                         </div>
@@ -148,10 +156,10 @@
                                 </div>
 
                                 <div class="team-social">
-                                    <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle mb-2"
+                                    <a class="btn btn-light btn-light-outline-0 btn-square-navbar rounded-circle mb-2"
                                         href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"><i
                                             class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle"
+                                    <a class="btn btn-light btn-light-outline-0 btn-square-navbar rounded-circle"
                                         href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"><i
                                             class="fab fa-instagram"></i></a>
                                 </div>
@@ -502,9 +510,9 @@
                 <div class="col-md-4">
                     <div class="d-flex justify-content-center">
                         <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"
-                            class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-facebook-f"></i></a>
+                            class="me-3 btn-square-navbar border rounded-circle nav-fill"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
-                            class="me-3 btn-square border rounded-circle nav-fill"><i class="fab fa-instagram"></i></a>
+                            class="me-3 btn-square-navbar border rounded-circle nav-fill"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center text-md-end text-white">
